--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     >
         <!-- Assets -->
         <a-assets>
-            <a-asset-item id="model" src="model.glb"></a-asset-item>
+            <a-asset-item id="model" src="./asetts/model.glb"></a-asset-item>
         </a-assets>
 
         <!-- Marker -->
-        <a-marker type="pattern" url="mark.patt">
+        <a-marker type="pattern" url="./assets/marker.patt">
             <a-entity
                 id="ar-model"
                 gltf-model="#model"
