--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </a-assets>
 
         <!-- Marker -->
-        <a-marker type="pattern" url="./assets/marker.patt">
+        <a-marker type="pattern" url="./asetts/marker.patt">
             <a-entity
                 id="ar-model"
                 gltf-model="#model"
